<resources>
    <string name="app_name">Auto-Aliance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">settingsActivity</string>
    <string name="title_activity_auto_parts">AutoPartsActivity</string>
    <string name="title_activity_lease_auto">LeaseAutoActivity</string>
    <string name="order_grid_button">Заказать</string>
    <string name="lease_auto_str">Прокат автомобилей</string>
    <string name="lease_auto_without_str">Аренда авто с водителем</string>
    <string name="auto_parts_text">Без посредников. Автозапчасти в Новосибирске, Кемеров, Томске, Барнауле, Омске. У нас без переплаты
        Интернет-магазин автозапчастей и аксессуаров для европейских, японских и корейских автомобилей.</string>
    <string name="Download">Скачать</string>
    <string name="auto_parts_header">Автозапчасти по очень выгодным ценам!</string>
    <string name="price_auto_parts">Прайс с автозапчастями</string>
    <string name="firstHeader_rent_your_auto">Не используете автомобиль? - тогда Вам к нам!</string>
    <string name="first_advertisment">А вы знали, что ваш автомобиль может приносить дополнительный доход?</string>
    <string name="second_advertisment">Если слышите об этом впервые, то обратите внимание!</string>
    <string name="third_advertisment">Забрали права, а автомобиль стоит? - Звоните!</string>
    <string name="fourth_advertisment">Кредитные тяжбы, запрет на регистрационные действия? - Не беда, звоните!</string>
    <string name="fifth_advertisment">Есть долги, давно не делали приобретения? - Звоните, поможем!</string>
    <string name="why_we">Почему мы?</string>
    <string name="text_buy__auto_for_you_1">Компания АВТО-АЛЬЯНС предоставляет возможность приобрести автомобиль в рассрочку у дилера любой марки.</string>
    <string name="text_buy_auto_for_you_2">Отказ в кредите? Автосалон предлагает купить машину с дополнительным оборудованием? Ваша работа неофициальная? Есть долги? Мы можем Вам помочь - авторассрочка для всех! У нас нет исключений! Приходите и заберите Ваш новый автомобиль уже сегодня!</string>
    <string name="text_buy_auto_for_you_3">Мы работаем с плохой кредитной историей, такси и неофициальным трудоустройством.</string>
    <string name="head_buy_auto_for_you_2">Возможность купить новый автомобиль в рассрочку</string>
    <string name="text_button_buy_auto_for_you">Заказать звонок</string>
    <string name="text_but_auto_for_you_block">Любой автомобиль! Без справок от работодателя! Лизинг юр. лицам! Лизинг физ. лицам!</string>
    <string name="header_buy_auto_for_you_1">Купим вам автомобиль</string>

</resources>
